<resources>
    <string name="app_name">Softtech-Sacco</string>
    <string name="full_name">Full Name</string>
    <string name="id_number">ID Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="kra_number">KRA PIN</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="click_to_get_otp">Click to get OTP</string>
    <string name="biulder_title">That\'s great!</string>
    <string name="biulder_msg">Your data has been sent to sacco admin. The sacco will contact you.</string>

    <string name="timer">Timer</string>
    <string name="otp_verification">OTP verification</string>
    <string name="sacco_name">Sacco name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timeout">Time out</string>
    <string name="timeremaining">Time remaining: </string>

</resources>