<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="#3177F1"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="498dp"
        android:textAlignment="center"
        android:text="@string/welcome"
        android:textColor="@color/purple_500"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="30dp"
        android:textAlignment="inherit"
        android:layout_marginBottom="300dp"
        android:hint="@string/phone_number"
        android:autofillHints="Phone Number"
        android:background="@drawable/buttons"
        android:inputType="phone"
        android:labelFor="@id/phone" />

    <TextView
        android:id="@+id/regtxt"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:text="@string/register"
        android:textColor="#E32778"
        android:textSize="18sp"
        android:textStyle="italic" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/click_to_get_otp"
        app:srcCompat="@drawable/arrow_forward"
        tools:ignore="RelativeOverlap,VectorDrawableCompat" />

</RelativeLayout>